/team/deactivateUsers
